ghc-4335c07/testsuite/tests/parser/should_compile/read047.hs

{-# LANGUAGE MagicHash #-}

module Foo where

foo# = 'a'

