ghc-4335c07/testsuite/tests/parser/should_fail/ParserNoForallUnicode.hs
{-# LANGUAGE UnicodeSyntax #-}

module ParserNoForallUnicode where

id' :: ∀ a . a → a
id' a = a
